css/custom.css
/* ... */
#page-handler table#tracklist.small .module-header,
#page-handler table#tracklist.medium .module-header,
#page-handler table#tracklist.large .module-header {
  overflow: hidden;
}
#page-handler table#tracklist.small .module-content,
#page-handler table#tracklist.medium .module-content,
#page-handler table#tracklist.large .module-content {
  overflow: hidden;
}
#page-handler table#tracklist.small .module-action,
#page-handler table#tracklist.medium .module-action,
#page-handler table#tracklist.large .module-action {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
}
#page-handler table#tracklist.small {
  height: 300px;
}
#page-handler table#tracklist.small .module-header.small {
  height: 32.5px;
}
#page-handler table#tracklist.small .module-header.medium {
  height: 75px;
}
#page-handler table#tracklist.small .module-header.large {
  height: 150px;
}
#page-handler table#tracklist.small .module-content {
  height: 150px;
}
#page-handler table#tracklist.medium {
  height: 400px;
}
#page-handler table#tracklist.medium .module-header.small {
  height: 62.5px;
}
#page-handler table#tracklist.medium .module-header.medium {
  height: 125px;
}
#page-handler table#tracklist.medium .module-header.large {
  height: 250px;
}
#page-handler table#tracklist.medium .module-content {
  height: auto;
}
#page-handler table#tracklist.large {
  height: 500px;
}
#page-handler table#tracklist.large .module-header.small {
  height: 82.5px;
}
#page-handler table#tracklist.large .module-header.medium {
  height: 165px;
}
#page-handler table#tracklist.large .module-header.large {
  height: 330px;
}
#page-handler table#tracklist.large .module-content {
  height: 170px;
}
#page-handler table#tracklist .module-header {
  position: relative;
}
#page-handler table#tracklist .module-header img {
  border-radius: 2px 2px 0 0;
  position: relative;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  width: 100%;
}
#page-handler table#tracklist .module-header .module-title {
  position: absolute;
  bottom: 0;
  left: 0;
  padding: 20px;
}
#page-handler table#tracklist .module-content {
  padding: 20px;
  border-radius: 0 0 2px 2px;
}
#page-handler table#tracklist .module-content p {
  margin: 0;
  color: inherit;
}
#page-handler table#tracklist .module-content .module-title {
  line-height: 48px;
}
#page-handler table#tracklist .module-action {
  border-top: 1px solid rgba(160, 160, 160, 0.2);
  padding: 20px;
}
#page-handler table#tracklist .module-action a {
  color: #f3d458;
  margin-right: 20px;
  text-transform: uppercase;
}
#page-handler table#tracklist .module-action a:hover {
  color: #faedb7;
}
#page-handler table#tracklist .module-reveal {
  padding: 20px;
  position: absolute;
  background-color: #FFF;
  width: 100%;
  overflow-y: auto;
  top: 100%;
  height: 100%;
  z-index: 1;
  display: none;
}
#page-handler table#tracklist .module-reveal .module-title {
  cursor: pointer;
  display: block;
}
#page-handler table#tracklist tr,
#page-handler table#tracklist td {
  padding: 15px;
  text-transform: uppercase;
  font-size: 12px;
}
/* Responsive YouTube videos */
.videoWrapper {
  position: relative;
  padding-bottom: 56.25%;
  /* 16:9 */
  padding-top: 25px;
  height: 0;
}
.videoWrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
/* Forms */
.form-module {
  padding: 25px;
}
.form-module .col {
  /*margin: 10px;*/
  padding: 10px;
}
.form-module textarea {
  border-radius: 4px;
  border-width: 1px;
  padding: 3px;
}
.form-module input[type=text] {
  border-radius: 4px;
  border-width: 1px;
  padding: 3px;
}

